# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Apr 19 2018 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected method DatabaseMetaData.getFunctions() for result column
  FUNCTION_TYPE.  It used to return DatabaseMetaData.functionResultUnknown
  value for when the internal function type was 6 (Analytic function) or 7
  (Loader function).  It now returns DatabaseMetaData.functionNoTable value
  for those functions.
- DatabaseMetaData methods getTables(), getColumns(), getProcedures() and
  getFunctions() now return the comment in the REMARKS result column when a
  comment has been set for the table / view / column / procedure / function
  via the SQL command COMMENT ON <db-object> IS 'comment-text'.

* Mon Oct 23 2017 Sjoerd Mullender <sjoerd@acm.org>
- Compiled and released new jars: monetdb-jdbc-2.27.jar, monetdb-mcl-1.16.jar
  and updated jdbcclient.jar

* Thu Oct  5 2017 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected method Connection.prepareCall(). It used to return null.
  Now it throws an SQLFeatureNotSupportedException to comply with the
  JDBC specification.

* Thu Sep 28 2017 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Added possibility to let the JDBC driver return columnType value
  Types.VARCHAR instead of Types.CLOB in case the result column of a
  ResultSet or parameter in a PreparedStatement is of data type 'clob'.
  To enable this behavior provide it as JDBC connection URL property:
     treat_clob_as_varchar=true
  For example: jdbc:monetdb://localhost:50000/demo?treat_clob_as_varchar=true
  See also:
  https://www.monetdb.org/Documentation/Manuals/SQLreference/Programming/JDBC
  This custom clob mapping informs generic JDBC programs to fetch clob
  column values via method ResultSet.getString() instead of getClob()
  and Clob.getCharacterStream() and next fetching from the stream.
  As MonetDB server MAPI communication protocol does not support